--- a/RazmenaKnjiga/appsettings.json
+++ b/RazmenaKnjiga/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MongoDB": {
+    "ConnectionString": "mongodb+srv://korisnik:razmenaknjiga@razmenaknjigacluster.2n25hoc.mongodb.net/?retryWrites=true&w=majority&appName=RazmenaKnjigaCluster ",
+    "DatabaseName": "RazmenaKnjiga"
+  }
 }
